# postgresql-logical-replication

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yaml  env-example.sh  pyproject.toml
data/ddl/: users.sql
data/insert/: users.sql
deploy/: cloud-init.yaml  compute-instances.tf  output.tf  variables.tf  vpc.tf
docker/postgresql/: Dockerfile
src/: execute_ddl.py  generate_users_data.py  main.py  utils.py
src/sql/ddl/: users.sql
src/sql/insert/: users.sql
terraform/: cloud-init.yaml  compute-instances.tf  output.tf  security-group.tf  variables.tf
