[tool.poetry]
name = "postgresql-logical-replication"
version = "1.0.0"
description = ""
authors = ["Leonid Grishenkov <grishenkovleonid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
faker = "^30.1.0"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
fire = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
